--- a/root/usr/share/rpcd/acl.d/luci-app-tailscale.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-tailscale.json
@@ -3,7 +3,8 @@
 		"description": "Grant access to Tailscale configuration",
 		"read": {
 			"file": {
-				"/sbin/ip -s -j ad": [ "exec" ],
+				"/sys/class/net/tailscale0/*": [ "read" ],
+				"/sbin/ip addr show tailscale0": [ "exec" ],
 				"/sbin/logread -e tailscale": [ "exec" ],
 				"/usr/sbin/tailscale status --json": [ "exec" ],
 				"/usr/sbin/tailscale login": [ "exec" ],
